# GOGAgent

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt
checkpoints/mmlu_pro/: policy.pt
data_splits/mmlu/: gptswarm153_selection.jsonl
docs/: gptswarm153_agent_acc.md
eval/: __init__.py  common.py  eval_fix.py  eval_multiagentbench_fix.py  eval_policy.py
gogagent/: __init__.py  cli.py
gogagent/actions/: __init__.py  base.py  mask.py  registry.py
gogagent/adapters/: __init__.py  base.py  gsm8k.py  humaneval.py  mmlu.py  mmlu_subjects.py  mmlu_task_encoder.py  registry.py
gogagent/agents/: __init__.py  adversarial_judge.py  answer_normalizer.py  base.py  challenger.py  defender.py  format_checker.py  format_verifier.py  judge.py  mmlu_shuffle.py  plan_sketch.py  registry.py  solver.py  supervisor.py  (+2 more)
scripts/: build_balanced_bc_dataset.py  mine_mmlu_direct_hard.py  record_best_run.py  run_best_policy_gptswarm153.sh  run_mmlu_bc_pipeline.sh  run_mmlu_full.sh  run_mmlu_pro_bc_rl.sh  run_policy_train_eval.sh  sample_mmlu_bc_train.py  sample_mmlu_pro.py  sample_mmlu_val_after_gptswarm153.py  smoke_actions.py  smoke_all.py  smoke_contracts.py  smoke_loaders.py  smoke_training.py  train_bc_policy.sh  train_rl_policy.sh  verify_compile.sh
tests/: live_mmlu_graph_llm.py  live_mmlu_hard19_graph_llm.py  smoke_round1_refactor.py  test_bc_trajectory_generation.py  test_oracle_mmlu.py  test_policy_graph_encoding.py  test_prompt_specs.py  test_smoke.py
train/: __init__.py  checkpoint.py
(+133 files in other folders)
