[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gogagent"
version = "0.1.0"
description = "Supervisor-guided Organization Graph-of-Graphs research MVP"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["gogagent*"]
