[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gogagent"
version = "0.1.0"
description = "Supervisor-guided Organization Graph-of-Graphs research MVP"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
gogagent = "gogagent.cli:main"

[tool.setuptools.packages.find]
include = ["gogagent*"]
